# AndroidShare

./: .gitignore  README.md
Android_Java/: .project  android_gpu
Android_Java/Android studio/: Android studio打包jar方法 - 简书.webarchive  configure.txt
Android_Java/Http/: （三）—— TCP:IP - 岁寒.webarchive  （二）—— 以太网与交换机 - 岁寒.webarchive  （五）—— HTTP 和 HTTPS - 岁寒.webarchive  （四）—— TCP 和路由器 - 岁寒.webarchive
Android_Java/Pattern/: PackageDemo.java
Android_Java/Rxjava/: MainActivity.java
Android_Java/anr/: ART运行时垃圾收集（GC）过程分析 - CSDN博客.webarchive  Android GC 那点事 - 偶素浅小浅 - 博客园.webarchive  Anr日志分析.webarchive  Dalvik与ART的GC调试.webarchive  dropBox
Android_Java/audio/:  OpenSL ES API.webarchive  TestAudioCaptureWithThreshold.java
Android_Java/blog/: Android微信智能心跳方案.webarchive  Xlog Benchmark · Tencent:mars Wiki.webarchive  【Dev Club 分享】微信mars 的高性能日志模块 xlog.webarchive  源码_微信跨平台组件mars-xlog架构分析及迁移思路.webarchive
Android_Java/c/: CMake 入门实战 | HaHack.webarchive  cmake  curl  func.c  makefile.txt  readme.txt  timeutils.c
Android_Java/c++/: blog_类内存分布  c++ Template
Android_Java/cmd/: linux
Android_Java/domain/: MediaRecorderUtils.java  StartLiveActivity.java  com_common_jni_MediaRecorderUtils.c  com_common_jni_MediaRecorderUtils.h  ex
Android_Java/ffm/: cmd
Android_Java/fw/: ButterKnife Zelezny.webarchive  u3shadow:RemoveButterKnife: An Android Studio plugin to help remove use of ButterKnife.webarchive
Android_Java/git/: FAQ  Git-远程分支，远程跟踪分支，跟踪分支的区别 - CSDN博客.webarchive  book  cmd  cmd_blame  cmd_branch  cmd_clean  cmd_fetch  cmd_ffmpeg  cmd_ignore  cmd_merge  cmd_pull  cmd_push  cmd_tag  git_inti
Android_Java/gpu/: android_gpu
Android_Java/jni/: GetReleaseByteArrayElements  book.txt  jniHead.h.txt  jniNote  jstring  spec.txt  内存释放.txt
Android_Java/log/: MarsSample.mmap2  MarsSample_20170326(1).xlog
Android_Java/ndk/: NDK_Download  adb_shell  cmake  (+8 more)
Android_Java/ndk/cmakeDemo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo  main.cc
Android_Java/ndk/cmakeDemo/math/: CMakeLists.txt  MFun.cc  Makefile  cmake_install.cmake  libMFun.dylib
(+119 files in other folders)
